/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Main.java to edit this template
 */
package eva2_12_interfaces;

/**
 *
 * @author elvat
 */
public class EVA2_12_INTERFACES {

    /**
     * @param args the command line arguments
     */
    public static void main(String[] args) {
        // TODO code application logic here
        Empleado empleado = new Empleado("Maquilero", 10000, "Hernan", "Cortez", 56);
        empleado.mostrarMensaje();
    }
    
}
