/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package eva2_12_interfaces;

/**
 *
 * @author elvat
 */
public interface Mensaje {
    public int valor = 50; // normalmente no se usan mucho
    public void mostrarMensaje(); // La interfaz solo tiene metodos publicos abstractos
}
